crates/karva/tests/it/snapshots/it__coverage__cov_annotation_only_local_declaration@branch-2.snap
---
source: crates/karva/tests/it/coverage.rs
expression: "context.read_file(\"karva.json\")"
---
{
  "meta": {
    "format": 2,
    "version": "karva"
  },
  "files": {
    "example.py": {
      "executed_lines": [
        1,
        3,
        4
      ],
      "summary": {
        "covered_lines": 3,
        "num_statements": 3,
        "percent_covered": 100.0,
        "missing_lines": [],
        "excluded_lines": [],
        "num_branches": 0,
        "num_partial_branches": 0,
        "covered_branches": 0,
        "missing_branches": 0,
        "percent_branches_covered": 100.0
      },
      "missing_lines": [],
      "excluded_lines": [],
      "executed_branches": [],
      "missing_branches": []
    }
  },
  "totals": {
    "covered_lines": 3,
    "num_statements": 3,
    "percent_covered": 100.0,
    "num_branches": 0,
    "num_partial_branches": 0,
    "covered_branches": 0,
    "missing_branches": 0,
    "percent_branches_covered": 100.0
  }
}
